Fixed sslexception when using http.